アセンブリ情報の統合とUIの改善
- `Asterism.csproj`にアセンブリ情報を統合し、`AssemblyInfo.cs`を削除。
- バージョン情報の取得を動的に変更（`Core.cs`）。
- `FormMain`のタイトルバーからバージョン情報表示を削除。
- `AboutBox`のUIを改善し、著作権情報やリンクを更新。
- `AboutBox.resx`に新しいアイコンリソースを追加。
- XMLコメントの整形によりリソースファイルの可読性を向上。

--- a/src/Asterism/Asterism.csproj
+++ b/src/Asterism/Asterism.csproj
@@ -8,8 +8,20 @@
     <UseWindowsForms>true</UseWindowsForms>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
     <OutputPath>..\..\bin\$(Configuration)\</OutputPath>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <NoWarn>$(NoWarn);CA1416;WFO1000</NoWarn>
+    
+    <!-- バージョン情報 -->
+    <Version>3.0.0</Version>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
+    
+    <!-- アセンブリ情報 -->
+    <Product>asterism</Product>
+    <Title>asterism</Title>
+    <Description>CSV, TSV File Visualizer for researchers</Description>
+    <Company>ClockAhead</Company>
+    <Copyright>Copyright © ClockAhead 2009-2025</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
