プロジェクト構造の再編成と国際化対応
ソースコード、フォーム、サンプル、ドキュメントを分離し、モダンなプロジェクト構造に再編成しました。`README.md` を更新し、英語化および機能説明の改善を行いました。Self-Contained アプリケーションとしてのビルド設定を追加し、ユーザーの利便性を向上。MITライセンスを適用し、サードパーティライブラリのライセンス情報を明記しました。

--- a/src/Asterism/Asterism.csproj
+++ b/src/Asterism/Asterism.csproj
@@ -22,6 +22,12 @@
     <Description>CSV, TSV File Visualizer for researchers</Description>
     <Company>ClockAhead</Company>
     <Copyright>Copyright © ClockAhead 2009-2025</Copyright>
+    
+    <!-- Publish設定（Self-Contained用） -->
+    <SelfContained>true</SelfContained>
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">win-x64</RuntimeIdentifier>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
   </PropertyGroup>
 
   <ItemGroup>
