--- a/src/Asterism/Asterism.csproj
+++ b/src/Asterism/Asterism.csproj
@@ -20,8 +20,7 @@
     <Product>asterism</Product>
     <Title>asterism</Title>
     <Description>CSV, TSV File Visualizer for researchers</Description>
-    <Company>ClockAhead</Company>
-    <Copyright>Copyright © ClockAhead 2009-2025</Copyright>
+    <Copyright>Copyright © dck-jp 2009-2025</Copyright>
     
     <!-- Publish設定（Self-Contained用） -->
     <SelfContained>true</SelfContained>
