--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,10 +26,10 @@ jobs:
       run: dotnet build -c Release --no-restore
       
     - name: Publish Self-Contained (x64)
-      run: dotnet publish src/Asterism/Asterism.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=false -p:PublishTrimmed=false -o publish/win-x64
+      run: dotnet publish src/Asterism/Asterism.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=false -o publish/win-x64
       
     - name: Publish Self-Contained (x86)
-      run: dotnet publish src/Asterism/Asterism.csproj -c Release -r win-x86 --self-contained true -p:PublishSingleFile=false -p:PublishTrimmed=false -o publish/win-x86
+      run: dotnet publish src/Asterism/Asterism.csproj -c Release -r win-x86 --self-contained true -p:PublishSingleFile=true -p:PublishTrimmed=false -o publish/win-x86
       
     - name: Create ZIP archives
       run: |
